improvements & refactor
